--- a/README
+++ b/README
@@ -12,10 +12,11 @@ Copyright:  (c) 2009, 2010, 2011, 2012 by Christian Brabandt
 1. Contents                                                  *Colorizer*
 
         1.  Colorizer Manual.............................: |Colorizer-manual|
-                1.1 :ColorCodes..........................: |:ColorCodes|
-                1.2 :NoColor.............................: |:NoColor|
-                1.3 :Rgb2Xterm...........................: |:Rgb2Xterm|
+                1.1 :ColorHighlight......................: |:ColorHighlight|
+                1.2 :ColorClear..........................: |:ColorClear|
+                1.3 :RGB2Xterm...........................: |:RGB2Xterm|
                 1.4 :HSL2RGB.............................: |:HSL2RGB|
+                1.5 :ColorContrast.......................: |:ColorContrast|
         2.  Configuration................................: |Colorizer-config|
                 2.1 Automatic loading....................: |Colorizer-auto|
                 2.2 Use X11 colornames...................: |Colorizer-names|
@@ -55,8 +56,8 @@ This plugin defines the following commands:
                                                                  *:ColorClear*
 :ColorClear                 Turn off Color highlighting.
 
-                                                                 *:Rgb2Xterm*
-:RGB2XTERM [#]RRGGBB        Translate the color code given as argument to a
+                                                                 *:RGB2Xterm*
+:RGB2Xterm [#]RRGGBB        Translate the color code given as argument to a
                             the closest color, that can be displayed by the
                             terminal. Note, the color must be given in the
                             format #RRGGBB (the hex format of the colors reg,
@@ -72,6 +73,10 @@ This plugin defines the following commands:
                             defines the Hue as absolute value between 0 and
                             255 and V and L represent a percentage for value
                             and Lightness.
+
+                                                                *:ColorContrast*
+:ColorContrast              Switch between all different color contrast
+                            settings.
 
 
 2 Colorizer Configuration                                   *Colorizer-config*
@@ -132,6 +137,8 @@ third line of this document.
   reported by Taybin Rutkin, thanks!)
 - support autoloading (requested by Ingo Karkat, thanks!)
 - add |GLVS| support
+- |:ColorContrast| to interactively switch between contrast settings
+  (suggested by Ingo Karkat, thanks!)
 0.2: Mar 02, 2012 {{{1
 
 - Initial upload
