--- a/README
+++ b/README
@@ -212,7 +212,7 @@ third line of this document.
 ==============================================================================
 
 
-0.4: (unreleased) {{{1
+0.4: Mar, 23, 2012 {{{1
 - |:ColorSwapFgBg| (suggested by teschmitz, in
   https://github.com/chrisbra/color_highlight/issues/3, thanks!)
 - make automatic color loading work (reported by wedgwood in
