--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 *Colorizer.txt*   A plugin to color colornames and codes
 
 Author:     Christian Brabandt <cb@256bit.org>
-Version:    0.4 Fri, 23 Mar 2012 21:14:16 +0100
+Version:    0.5 Tue, 03 Apr 2012 15:19:30 +0200
 Copyright:  (c) 2009, 2010, 2011, 2012 by Christian Brabandt         
             The VIM LICENSE applies to Colorizer.txt
             (see |copyright|) except use NrrwRgnPlugin instead of "Vim".
@@ -212,7 +212,7 @@ third line of this document.
 ==============================================================================
 
 
-0.5: (unreleased) {{{1
+0.5: (Apr 03, 2012) {{{1
 - Fix issue 7 (reported by teschmitz in
   https://github.com/chrisbra/color_highlight/issues/7, thanks!)
 0.4: Mar, 23, 2012 {{{1
