updated todo file

--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
 
-- Make code easier. Could always use a dictionary and not depending on what either a dictionary or a simple color name
+- Performance problems? (do profiling to find out)
 - Write tests. Best would be to have screenshots available so one can easily compare
