--- a/todo
+++ b/todo
@@ -4,4 +4,5 @@
  and have a definition of [color1] at the end of the buffer
  [color1] style=fg:blue,bg:black,special:underline)
 - Performance problems? (do profiling to find out)
-- Write tests. Best would be to have screenshots available so one can easily compare
+- Write tests. Best would be to have screenshots available so
+  one can easily compare (can use the term_dumpwrite() function) for this
